fix: scrollbar and things